--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -360,10 +360,6 @@
     <Compile Include="Controllers\VacancyStatusController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="IoC\VacancySourceRegistry.cs" />
-    <Compile Include="Mediators\Admin\AdminMediator.cs" />
-    <Compile Include="Mediators\Admin\AdminMediatorCodes.cs" />
-    <Compile Include="Mediators\Admin\IAdminMediator.cs" />
-    <Compile Include="Mediators\Admin\TransferVacanciesMessages.cs" />
     <Compile Include="Mediators\Application\ITraineeshipApplicationMediator.cs" />
     <Compile Include="Mediators\Application\TraineeshipApplicationMediator.cs" />
     <Compile Include="Mediators\Application\ApprenticeshipApplicationMediator.cs" />
@@ -410,9 +406,6 @@
     <Compile Include="Mediators\VacancyStatus\VacancyStatusMediatorCodes.cs" />
     <Compile Include="Mediators\VacancyStatus\VacancyStatusMediator.cs" />
     <Compile Include="Validators\ContactMessageViewModelValidator.cs" />
-    <Compile Include="ViewModels\Admin\ChangeUkprnViewModel.cs" />
-    <Compile Include="ViewModels\Admin\TransferVacanciesViewModel.cs" />
-    <Compile Include="ViewModels\Admin\TransferVacancyViewModel.cs" />
     <Compile Include="ViewModels\AuthorizeResponseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -896,6 +889,8 @@
     <Content Include="Views\InformationRadiator\Index.cshtml" />
     <Content Include="Views\Provider\Sites.cshtml" />
     <Content Include="Views\Admin\TransferVacancies.cshtml" />
+    <Content Include="Views\Admin\ChooseProvider.cshtml" />
+    <Content Include="Views\Admin\ConfirmVacancies.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
@@ -927,6 +922,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
