ra-339: Get the providerid and providersiteid for vacancy transfer.

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Validators\Provider\ProviderSiteSearchViewModelValidator.cs" />
     <Compile Include="Validators\Provider\ProviderSiteRelationshipViewModelValidator.cs" />
     <Compile Include="ViewModels\Admin\ChangeUkprnViewModel.cs" />
+    <Compile Include="ViewModels\Admin\ManageVacancyTransferViewModel.cs" />
     <Compile Include="ViewModels\Admin\TransferVacanciesResultsViewModel.cs" />
     <Compile Include="ViewModels\Admin\TransferVacanciesViewModel.cs" />
     <Compile Include="ViewModels\Admin\TransferVacancyViewModel.cs" />
