--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -9,6 +9,7 @@
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net452" />
   <package id="Glimpse" version="1.8.6" targetFramework="net451" />
   <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net451" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
