Allowed glimpse remotely on all non prod environments

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
@@ -81,6 +81,13 @@
       <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
     </rules>
   </nlog>
-  
+
+  <glimpse>
+    <runtimePolicies xdt:Transform="Remove">
+      <ignoredTypes>
+        <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet" />
+      </ignoredTypes>
+    </runtimePolicies>
+  </glimpse>
   
 </configuration>
