--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Mediators\VacancyPosting\IndexTests.cs" />
     <Compile Include="Mediators\VacancyPosting\RequirementsProspectsTests.cs" />
     <Compile Include="Mediators\VacancyPosting\TestsBase.cs" />
+    <Compile Include="Mediators\VacancyPosting\TransferVacancyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\Applications\ApprenticeshipApplicationViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\Applications\ApprenticeshipApplicationViewModelClientValidatorTests.cs" />
