--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -897,6 +897,7 @@
     <Content Include="Views\Admin\ManageVacanciesTransfers.cshtml" />
     <Content Include="Views\Admin\ProviderUsers.cshtml" />
     <Content Include="Views\Admin\ProviderUser.cshtml" />
+    <Content Include="Views\ApprenticeshipApplication\SentDecisionConfirmation.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
