--- a/src/SFA.Apprenticeships.Web.Candidate/SFA.Apprenticeships.Web.Candidate.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate/SFA.Apprenticeships.Web.Candidate.csproj
@@ -804,6 +804,7 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>ConfirmAccountDeletion.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\ApprenticeshipApplication\CandidateApplicationFeedback.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
