ra-447: ensure that new anonymous application view links included properly url-encoded application data

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <Compile Include="Builders\VacancyViewModelBuilder.cs" />
     <Compile Include="Mappers\RecruitMappersTests.cs" />
+    <Compile Include="Mediators\Application\ApplicationMediatorTests.cs" />
     <Compile Include="Mediators\Application\ApprenticeshipApplicationMediatorTests.cs" />
     <Compile Include="Mediators\Home\HomeMediatorTests.cs" />
     <Compile Include="Mediators\Locations\LocationsTests.cs" />
