--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -870,6 +870,7 @@
     <Content Include="Views\Admin\ApiUser.cshtml" />
     <Content Include="Views\Admin\CreateApiUser.cshtml" />
     <Content Include="Views\Admin\ResetApiUserPassword.cshtml" />
+    <Content Include="Views\Candidate\ApplicationFeedback.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
