--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -872,6 +872,8 @@
     <Content Include="Views\Admin\ApiUsers.cshtml" />
     <Content Include="Views\Admin\ApiUser.cshtml" />
     <Content Include="Views\Admin\CreateApiUser.cshtml" />
+    <Content Include="Views\Admin\Standards.cshtml" />
+    <Content Include="Views\Admin\Frameworks.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
