--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Applications\ApplicationStatusProcessorTests.cs" />
     <Compile Include="Applications\Strategies\ApplicationStatusUpdateStrategyTests.cs" />
     <Compile Include="Application\ApprenticeshipApplicationServiceTests.cs" />
+    <Compile Include="Application\Strategies\SetApplicationStatusStrategyTests.cs" />
     <Compile Include="Builders\ApplicationStatusSummaryBuilder.cs" />
     <Compile Include="Builders\ApprenticeshipSearchResultsBuilder.cs" />
     <Compile Include="Candidates\Configuration\HousekeepingConfigurationBuilder.cs" />
