--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/packages.config
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/packages.config
@@ -4,4 +4,5 @@
   <package id="MongoDB.Bson" version="2.2.3" targetFramework="net451" />
   <package id="MongoDB.Driver" version="2.2.3" targetFramework="net451" />
   <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net451" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
 </packages>
