--- a/src/SFA.Apprenticeships.Infrastructure.Migrate.Faa/SFA.Apprenticeships.Infrastructure.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Migrate.Faa/SFA.Apprenticeships.Infrastructure.Migrate.Faa.csproj
@@ -93,9 +93,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-        <Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>    
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
@@ -150,6 +150,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Data.Migrate.Faa\SFA.Apprenticeships.Data.Migrate.Faa.csproj">
       <Project>{a8bfd333-2d6b-4d91-b544-97c269212b06}</Project>
       <Name>SFA.Apprenticeships.Data.Migrate.Faa</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Azure.ServiceBus\SFA.Apprenticeships.Infrastructure.Azure.ServiceBus.csproj">
+      <Project>{bb161a54-ef1a-4611-8296-9a0be69b4587}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Azure.ServiceBus</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Common\SFA.Apprenticeships.Infrastructure.Common.csproj">
       <Project>{78b1f2a1-dcc3-4ed3-8ce0-16e0781b59fa}</Project>
