ra-318: Show feedback page and list of candidates.

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -271,6 +271,7 @@
     <Compile Include="ViewModels\Api\ApiUserSearchResultsViewModel.cs" />
     <Compile Include="ViewModels\Api\ApiUserSearchViewModel.cs" />
     <Compile Include="ViewModels\Api\ApiUserViewModel.cs" />
+    <Compile Include="ViewModels\Application\Apprenticeship\BulkRejectApplicationViewModel.cs" />
     <Compile Include="ViewModels\ProviderUser\ProviderUserSearchResultsViewModel.cs" />
     <Compile Include="ViewModels\ProviderUser\ProviderUserSearchViewModel.cs" />
     <Compile Include="ViewModels\Provider\ProviderSearchResultsViewModel.cs" />
