--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -873,6 +873,7 @@
     <Content Include="Views\Admin\ResetApiUserPassword.cshtml" />
     <Content Include="Views\Candidate\ApplicationFeedback.cshtml" />
     <Content Include="Views\Admin\Employers.cshtml" />
+    <Content Include="Views\Admin\Employer.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
