--- a/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
+++ b/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
@@ -102,11 +102,11 @@
     <Compile Include="Strategies\GetByEdsUrnStrategy.cs" />
     <Compile Include="Strategies\GetByIdsStrategy.cs" />
     <Compile Include="Strategies\GetByIdStrategy.cs" />
-    <Compile Include="Strategies\GetPagedEmployerSearchResultsStrategy.cs" />
+    <Compile Include="Strategies\SearchEmployersStrategy.cs" />
     <Compile Include="Strategies\IGetByEdsUrnStrategy.cs" />
     <Compile Include="Strategies\IGetByIdsStrategy.cs" />
     <Compile Include="Strategies\IGetByIdStrategy.cs" />
-    <Compile Include="Strategies\IGetPagedEmployerSearchResultsStrategy.cs" />
+    <Compile Include="Strategies\ISearchEmployersStrategy.cs" />
     <Compile Include="Strategies\ISaveEmployerStrategy.cs" />
     <Compile Include="Strategies\ISendEmployerLinksStrategy.cs" />
     <Compile Include="Strategies\SaveEmployerStrategy.cs" />
