--- a/src/SFA.Apprenticeships.Application.Application/SFA.Apprenticeships.Application.Application.csproj
+++ b/src/SFA.Apprenticeships.Application.Application/SFA.Apprenticeships.Application.Application.csproj
@@ -87,6 +87,8 @@
   <ItemGroup>
     <Compile Include="Entities\ApplicationStatusChanged.cs" />
     <Compile Include="Entities\ApplicationStatusSummary.cs" />
+    <Compile Include="Entities\ApplicationUpdate.cs" />
+    <Compile Include="Entities\ApplicationUpdateType.cs" />
     <Compile Include="Entities\ApprenticeshipApplicationUpdate.cs" />
     <Compile Include="Entities\TraineeshipApplicationUpdate.cs" />
     <Compile Include="Entities\VacancyStatusSummary.cs" />
