Fixed integration tests and added a test for the new find method

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Schemas\dbo\Provider\ProviderRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\ReferenceNumber\ReferenceNumberTests.cs" />
     <Compile Include="Schemas\dbo\VacancyOwnerRelationship\VacancyOwnerRelationshipRepositoryTests.cs" />
+    <Compile Include="Schemas\dbo\VacancySummary\VacancySummaryRepositoryTests.cs" />
     <Compile Include="Schemas\Provider\ProviderUserRepositoryTests.cs" />
     <Compile Include="Schemas\Reference\ReferenceRepositoryTests.cs" />
     <Compile Include="Schemas\UserProfile\AgencyUserRepositoryTests.cs" />
