--- a/src/SFA.Apprenticeships.Web.Common/packages.config
+++ b/src/SFA.Apprenticeships.Web.Common/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
