--- a/src/SFA.Apprenticeships.Application.Candidate/SFA.Apprenticeships.Application.Candidate.csproj
+++ b/src/SFA.Apprenticeships.Application.Candidate/SFA.Apprenticeships.Application.Candidate.csproj
@@ -97,7 +97,8 @@
     <Compile Include="CandidateApplicationService.cs" />
     <Compile Include="CandidateSearchService.cs" />
     <Compile Include="CandidateService.cs" />
-    <Compile Include="CreateCandidateRequest.cs" />
+    <Compile Include="Entities\CandidateUpdateType.cs" />
+    <Compile Include="Entities\CandidateUpdate.cs" />
     <Compile Include="Strategies\Candidates\GetCandidateSummariesStrategy.cs" />
     <Compile Include="Strategies\Candidates\IGetCandidateSummariesStrategy.cs" />
     <Compile Include="Strategies\Candidates\ISearchCandidatesStrategy.cs" />
@@ -105,7 +106,6 @@
     <Compile Include="Strategies\Candidates\SearchCandidatesStrategy.cs" />
     <Compile Include="Strategies\Candidates\SetUserStatusPendingDeletionStrategy.cs" />
     <Compile Include="Strategies\GetCandidateVacancyDetailStrategy.cs" />
-    <Compile Include="SaveCandidateRequest.cs" />
     <Compile Include="Strategies\Apprenticeships\GetCandidateApprenticeshipApplicationsStrategy.cs" />
     <Compile Include="Strategies\Apprenticeships\SubmitApprenticeshipApplicationStrategy.cs" />
     <Compile Include="Strategies\GetCandidateByIdStrategy.cs" />
